--- a/stylesheets/css/components/card.css
+++ b/stylesheets/css/components/card.css
@@ -7,7 +7,6 @@
 .card figure {
   padding: 0;
   margin: 0;
-  width: 100%;
   overflow: hidden;
   border-radius: 16px 16px 0 0;
 }
@@ -34,7 +33,7 @@
 .card__content__plan {
   background-color: #f5f7ff;
   margin-bottom: 20px;
-  padding: 10px 0;
+  padding: 20px 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -58,6 +57,10 @@
   color: #3829e0;
   font-weight: 700;
 }
+.card__content__plan a:hover {
+  opacity: 0.8;
+  text-decoration: none;
+}
 .card__content .cta {
   background-color: #3829e0;
   color: white;
@@ -70,6 +73,9 @@
   border-radius: 16px;
   margin-bottom: 20px;
 }
+.card__content .cta:hover {
+  opacity: 0.8;
+}
 .card__content .wrap-cancel {
   display: grid;
   place-items: center;
@@ -79,6 +85,14 @@
   color: #7280a7;
   font-weight: 900;
   text-decoration: none;
+}
+.card__content .wrap-cancel .cancel:hover {
+  color: #1f2f56;
+}
+@media only screen and (max-width: 375px) {
+  .card__content {
+    padding: 35px 16px;
+  }
 }
 
 /*# sourceMappingURL=card.css.map */
