--- a/stylesheets/css/style.css
+++ b/stylesheets/css/style.css
@@ -15,6 +15,16 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 }
+@media only screen and (max-width: 375px) {
+  body {
+    background-image: url("../../../images/pattern-background-mobile.svg");
+    padding: 0 16px;
+  }
+}
+
+p {
+  font-size: 16px;
+}
 
 .container {
   min-height: 100vh;
@@ -43,7 +53,6 @@ body {
 .card figure {
   padding: 0;
   margin: 0;
-  width: 100%;
   overflow: hidden;
   border-radius: 16px 16px 0 0;
 }
@@ -70,7 +79,7 @@ body {
 .card__content__plan {
   background-color: #f5f7ff;
   margin-bottom: 20px;
-  padding: 10px 0;
+  padding: 20px 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -94,6 +103,10 @@ body {
   color: #3829e0;
   font-weight: 700;
 }
+.card__content__plan a:hover {
+  opacity: 0.8;
+  text-decoration: none;
+}
 .card__content .cta {
   background-color: #3829e0;
   color: white;
@@ -106,6 +119,9 @@ body {
   border-radius: 16px;
   margin-bottom: 20px;
 }
+.card__content .cta:hover {
+  opacity: 0.8;
+}
 .card__content .wrap-cancel {
   display: grid;
   place-items: center;
@@ -115,6 +131,14 @@ body {
   color: #7280a7;
   font-weight: 900;
   text-decoration: none;
+}
+.card__content .wrap-cancel .cancel:hover {
+  color: #1f2f56;
+}
+@media only screen and (max-width: 375px) {
+  .card__content {
+    padding: 35px 16px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
