--- a/stylesheets/scss/components/card.scss
+++ b/stylesheets/scss/components/card.scss
@@ -4,11 +4,9 @@
 	background-color: white;
 	width: 400px;
 	border-radius: 16px;
-
 	figure {
 		padding: 0;
 		margin: 0;
-		width: 100%;
 		overflow: hidden;
 		border-radius: 16px 16px 0 0;
 		img {
@@ -35,7 +33,7 @@
 		&__plan {
 			background-color: $very-pale-blue;
 			margin-bottom: 20px;
-			padding: 10px 0;
+			padding: 20px 0;
 			display: flex;
 			justify-content: space-evenly;
 			align-items: center;
@@ -58,6 +56,10 @@
 			a {
 				color: $bright-blue;
 				font-weight: map-get($font-weights, medium);
+				&:hover {
+					opacity: 0.8;
+					text-decoration: none;
+				}
 			}
 		}
 		.cta {
@@ -71,6 +73,9 @@
 			text-decoration: none;
 			border-radius: 16px;
 			margin-bottom: 20px;
+			&:hover {
+				opacity: 0.8;
+			}
 		}
 		.wrap-cancel {
 			display: grid;
@@ -80,7 +85,13 @@
 				color: $desaturated-blue;
 				font-weight: map-get($font-weights, bold);
 				text-decoration: none;
+				&:hover {
+					color: $dark-blue;
+				}
 			}
+		}
+		@include display(mobile) {
+			padding: 35px 16px;
 		}
 	}
 }
