--- a/stylesheets/css/style.css
+++ b/stylesheets/css/style.css
@@ -47,8 +47,9 @@ p {
 
 .card {
   background-color: white;
-  width: 400px;
+  width: 420px;
   border-radius: 16px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 .card figure {
   padding: 0;
@@ -118,6 +119,7 @@ p {
   text-decoration: none;
   border-radius: 16px;
   margin-bottom: 20px;
+  box-shadow: rgba(35, 46, 94, 0.1) 0px 20px 25px -5px, rgba(35, 46, 94, 0.04) 0px 10px 10px -5px;
 }
 .card__content .cta:hover {
   opacity: 0.8;
