--- a/stylesheets/css/style.css
+++ b/stylesheets/css/style.css
@@ -11,13 +11,13 @@
 body {
   box-sizing: border-box;
   background-color: #e0e8ff;
-  background-image: url("../../../images/pattern-background-desktop.svg");
+  background-image: url("../../images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
   background-size: contain;
 }
 @media only screen and (max-width: 375px) {
   body {
-    background-image: url("../../../images/pattern-background-mobile.svg");
+    background-image: url("../../images/pattern-background-mobile.svg");
     padding: 0 16px;
   }
 }
