--- a/stylesheets/scss/base/_base.scss
+++ b/stylesheets/scss/base/_base.scss
@@ -15,12 +15,12 @@
 body {
 	box-sizing: border-box;
 	background-color: $pale-blue;
-	background-image: url("../../../images/pattern-background-desktop.svg");
+	background-image: url("../../images/pattern-background-desktop.svg");
 	background-repeat: no-repeat;
 	background-size: contain;
 
 	@include display(mobile) {
-		background-image: url("../../../images/pattern-background-mobile.svg");
+		background-image: url("../../images/pattern-background-mobile.svg");
 		padding: 0 16px;
 	}
 }
